--- a/suggestion_box/views/suggestion.html
+++ b/suggestion_box/views/suggestion.html
@@ -1,6 +1,6 @@
-<h1 class="animated infinite pulse">
+<a href='#/home' class="btn btn-primary">Back </a></p>
 
-    {{post.title}}</h1>
+<h1 style="text-align: center"> {{post.title}}</h1>
 <form class="wall" class="list-group">
     <div class="list-group-item" ng-repeat="comment in post.comments">
         <div class="panel panel-info">
