--- a/suggestion_box/views/home.html
+++ b/suggestion_box/views/home.html
@@ -1,12 +1,28 @@
-<h1>{{ helloWorld }}</h1>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href='#/home'>SuggestionBox</a>
+        </div>
 
+        <ul class="nav navbar-nav">
+
+            <li class="active"><a href='#/home'>Home</a></li>
+            <li><a href="#">Top 3 suggestions of the day</a></li>
+            <li><a href="#">Top 3 active users</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#/login"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
+        </ul>
+    </div>
+</nav>
+<li style="text-align:center;font-size:20px;font-family: 'Courier New', Courier, monospace">Hello {{uname}}</li>
 <form ng-submit="addSuggestionsToBox()" style="margin-top: 50px" class="well">
     <h3> Submit your Suggestion </h3>
     <div class="form-group">
         <input type="text" class="form-control" placeholder="Great Ideas here" ng-model="title">
     </div>
     <button type="submit" class="btn btn-primary"> Suggest</button>
-    <button class="btn btn-primary">Login In</button>
+
 </form>
 
 
